@@ -1,5 +1,5 @@
-mod_version=1.3.1
-mod_version_name=Hotfix - 1.3.1
+mod_version=1.3.2
+mod_version_name=Hotfix - 1.3.2
 group=willatendo.fossilslegacy
 java_version=21
 
@@ -14,7 +14,7 @@ minecraft_version_range=[1.21, 1.22)
 homepage=https://modrinth.com/project/fossils-and-archaeology-legacy
 issue_tracker=https://github.com/willatendo/Fossils-And-Archaeology-Legacy/issues
 update_tracker=https://github.com/willatendo/Willatendo-Mods/raw/main/fossilslegacy-updates.json
-simple_library_version=3.9.1
+simple_library_version=3.9.2
 jei_version=19.5.0.32
 mod_menu_version=11.0.0
 cloth_config_version=15.0.127
@@ -26,7 +26,7 @@ fabric_loader_version=0.15.11
 mm_version=2.3
 
 # NeoForge
-neoforge_version=21.0.95-beta
+neoforge_version=21.0.109-beta
 neoforge_version_range=[2,)
 
 # Gradle
